# loadlibdemo-windows

./: README.md
loadlibdemo/: CMakeLists.txt  demo.cpp  loadAdapter.cpp  loadAdapter.h
loadlibdemo/demolib1/: CMakeLists.txt  realfun.cpp
loadlibdemo/demolib2/: CMakeLists.txt  realfun.cpp  realfun.h
